add "delivery-menu", started making hamburger menu

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         <div class="space">
 <div class="navbar-containter">
     
-    <button aria-label="Główne menu nawigacji" class="navbar-button"><svg aria-hidden="true" focusable="false" viewBox="0 0 20 20" class="bt bu bv bw">
+    <button aria-label="Główne menu nawigacji" class="navbar-button">
+        <svg aria-hidden="true" focusable="false" viewBox="0 0 20 20" >
         <path d="M19.167 3.333H.833v2.5h18.334v-2.5zm0 5.834H.833v2.5h18.334v-2.5zM.833 15h18.334v2.5H.833V15z"></path></svg>
     </button>
-<a><img class="name" src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/97c43f8974e6c876.svg" ></a>
+<a><img class="name" src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/97c43f8974e6c876.svg"></a>
 
  
 
@@ -54,8 +55,16 @@
 </div>
 
 <div class="delivery-now-elements">
+
 <div class="delivery-now-text">Dostarcz teraz</div>
-<div class="delivery-now-more"></div>
+
+<div class="delivery-now-more">
+<div class="icon-more"><svg fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"><path d="M17 11.7494V14.916L12 11.0827L7 14.916V11.7494L12 7.91602L17 11.7494Z" fill="#000000" transform="rotate(180, 12, 12)"></path></svg>
+</div>
+
+</div>
+
+
 </div>
 
 
