started making hamburger menu, added js

--- a/index.html
+++ b/index.html
@@ -7,12 +7,26 @@
     <title>Uber Eats | Food Delivery and Takeout | Order Online from Restaurants Near You</title>
 </head>
 <body>
+<div class="hamburger-container">
+<div class="hamburger-background" id="bg"  onclick="closebackground()"></div>
+<div class="hamburger-menu-overlay" id="menu">
+<div class="hambuger-text">
+testtesttwestweds
+
+
+
+</div>
+
+</div>
+</div>
+
+
     <header>
         <div class="navbar">
         <div class="space">
 <div class="navbar-containter">
     
-    <button aria-label="Główne menu nawigacji" class="navbar-button">
+    <button aria-label="Główne menu nawigacji" class="navbar-button" onclick="openhamburger(), openbackground()">
         <svg aria-hidden="true" focusable="false" viewBox="0 0 20 20" >
         <path d="M19.167 3.333H.833v2.5h18.334v-2.5zm0 5.834H.833v2.5h18.334v-2.5zM.833 15h18.334v2.5H.833V15z"></path></svg>
     </button>
@@ -80,6 +94,6 @@ Lub
 
 </div>
 </div>
-    
+    <script src="script.js"></script>
 </body>
 </html>
