added images to services-section

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ Lub
 
 
 <div class="services-section">
-    
+
     <div class="download-app">
             <div class="download-app-logo"> 
         <img alt="Uber&nbsp;Eats" role="img" src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/31ee382bd0e6ed84.svg">
@@ -271,7 +271,27 @@ Lub
             </a> 
     </div>
 
+<div class="more-sections">
 
+    <a href="//www.uber.com/business/eats">
+        <img alt="" role="presentation" src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/88d55f7112efe55f.webp" loading="lazy" height="191" width="343" class="more-sections-images">
+        <p class="more-sections-p1">Zadbaj o posiłki dla pracowników</p>
+        <p class="more-sections-p2">Utwórz konto firmowe</p>
+    </a>
+
+    <a href="//merchants.ubereats.com/s/signup/" class="more-sections-space">
+        <img alt="" role="presentation" src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/711d51ca1b458931.webp" loading="lazy" height="191" width="343" class="more-sections-images">
+        <p class="more-sections-p1">Ty zapewniasz menu, a my dostawę</p>
+        <p class="more-sections-p2">Dodaj swoją restaurację</p>
+    </a>
+
+    <a href="//www.uber.com/drive/delivery/" class="more-sections-space">
+        <img alt="" role="presentation" src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/16522a701585873b.webp" loading="lazy" height="191" width="343" class="more-sections-images">
+        <p class="more-sections-p1">Realizuj dostawy z Uber Eats</p>
+        <p class="more-sections-p2">Zarejestruj się, aby realizować dostawy</p>
+    </a>
+
+</div>
 
 
 </div>
