added spot for map, added city and country lists

--- a/index.html
+++ b/index.html
@@ -293,6 +293,71 @@ Lub
 
 </div>
 
+<div class="more-sections">
+    <h2 class="more-sections-text-city">Miasta w pobliżu</h2>
+
+    <div class="more-sections-map">
+        <div class="map">
+            map
+        </div>
+    </div>
+
+    <div class="more-sections-cities">
+        <div><a href="https://www.ubereats.com/pl/city/bydgoszcz-kujawsko-pomorskie"><span class="city-name">Bydgoszcz</span></a></div>
+        <div><a href="https://www.ubereats.com/pl/city/czestochowa-slaskie"><span class="city-name">Częstochowa</span></a></div>
+        <div><a href="https://www.ubereats.com/pl/city/kraków-malopolskie"><span class="city-name">Kraków</span></a></div>
+        <div><a href="https://www.ubereats.com/pl/city/lódz-lódzkie"><span class="city-name">Łódź</span></a></div>
+        <div><a href="https://www.ubereats.com/pl/city/lublin-lubelskie"><span class="city-name">Lublin</span></a></div>
+        <div><a href="https://www.ubereats.com/pl/city/poznan-wielkopolskie"><span class="city-name">Poznań</span></a></div>
+        <div><a href="https://www.ubereats.com/pl/city/rzeszów-podkarpackie"><span class="city-name">Rzeszów</span></a></div>
+        <div><a href="https://www.ubereats.com/pl/city/szczecin-zachodniopomorskie"><span class="city-name">Szczecin</span></a></div>
+        <div><a href="https://www.ubereats.com/pl/city/torun-kujawsko-pomorskie"><span class="city-name">Toruń</span></a></div>
+        <div><a href="https://www.ubereats.com/pl/city/gdansk-pomorskie"><span class="city-name">Trójmiasto</span></a></div>
+        <div><a href="https://www.ubereats.com/pl/city/warszawa-mazowieckie"><span class="city-name">Warszawa</span></a></div>
+        <div><a href="https://www.ubereats.com/pl/city/wroclaw-dolnoslaskie"><span class="city-name">Wrocław</span></a></div>
+    </div>
+    <a class="display-all-cities" href="ubereats.com/pl/location">Wyświetl wszystkie miasta (ponad 500)</a>
+
+
+</div>
+
+<div class="more-sections">
+    <h2 class="country-text">Kraje, w których działa Uber Eats</h2>
+    <div class="country-list">
+        <div><a href="https://www.ubereats.com/au?slr=1"><span class="country-list-text">Australia</span></a></div>
+        <div><a href="https://www.ubereats.com/be?slr=1"><span class="country-list-text">Belgia</span></a></div>
+        <div><a href="https://www.ubereats.com/cl?slr=1"><span class="country-list-text">Chile</span></a></div>
+        <div><a href="https://www.ubereats.com/do?slr=1"><span class="country-list-text">Dominikana</span></a></div>
+        <div><a href="https://www.ubereats.com/ec?slr=1"><span class="country-list-text">Ekwador</span></a></div>
+        <div><a href="https://www.ubereats.com/fr?slr=1"><span class="country-list-text">Francja</span></a></div>
+        <div><a href="https://www.ubereats.com/gt?slr=1"><span class="country-list-text">Gwatemala</span></a></div>
+        <div><a href="https://www.ubereats.com/es?slr=1"><span class="country-list-text">Hiszpania</span></a></div>
+        <div><a href="https://www.ubereats.com/nl?slr=1"><span class="country-list-text">Holandia</span></a></div>
+        <div><a href="https://www.ubereats.com/ie?slr=1"><span class="country-list-text">Irlandia</span></a></div>
+        <div><a href="https://www.ubereats.com/jp?slr=1"><span class="country-list-text">Japonia</span></a></div>
+        <div><a href="https://www.ubereats.com/ca?slr=1"><span class="country-list-text">Kanada</span></a></div>
+        <div><a href="https://www.ubereats.com/ke?slr=1"><span class="country-list-text">Kenia</span></a></div>
+        <div><a href="https://www.ubereats.com/cr?slr=1"><span class="country-list-text">Kostaryka</span></a></div>
+        <div><a href="https://www.ubereats.com/mx?slr=1"><span class="country-list-text">Meksyk</span></a></div>
+        <div><a href="https://www.ubereats.com/de?slr=1"><span class="country-list-text">Niemcy</span></a></div>
+        <div><a href="https://www.ubereats.com/nz?slr=1"><span class="country-list-text">Nowa Zelandia</span></a></div>
+        <div><a href="https://www.ubereats.com/pa?slr=1"><span class="country-list-text">Panama</span></a></div>
+        <div><a href="https://www.ubereats.com/pl?slr=1"><span class="country-list-text">Polska</span></a></div>
+        <div><a href="https://www.ubereats.com/pt?slr=1"><span class="country-list-text">Portugalia</span></a></div>
+        <div><a href="https://www.ubereats.com/za?slr=1"><span class="country-list-text">Republika Południowej Afryki</span></a></div>
+        <div><a href="https://www.ubereats.com/sv?slr=1"><span class="country-list-text">Salwador</span></a></div>
+        <div><a href="https://www.ubereats.com/lk?slr=1"><span class="country-list-text">Sri Lanka</span></a></div>
+        <div><a href="https://www.ubereats.com/?slr=1"><span class="country-list-text">Stany Zjednoczone</span></a></div>
+        <div><a href="https://www.ubereats.com/ch?slr=1"><span class="country-list-text">Szwajcaria</span></a></div>
+        <div><a href="https://www.ubereats.com/se?slr=1"><span class="country-list-text">Szwecja</span></a></div>
+        <div><a href="https://www.ubereats.com/tw?slr=1"><span class="country-list-text">Tajwan (Republika Chińska)</span></a></div>
+        <div><a href="https://www.ubereats.com/gb?slr=1"><span class="country-list-text">Wielka Brytania</span></a></div>
+        <div><a href="https://www.ubereats.com/it?slr=1"><span class="country-list-text">Włochy</span></a></div>
+    </div>
+
+    <a class="all-countries" href="https://www.ubereats.com/pl/location#all-countries">Zobacz wszystkie kraje</a>
+</div>
+
 
 </div>
 
