added footer, added other-options

--- a/index.html
+++ b/index.html
@@ -362,6 +362,42 @@ Lub
 </div>
 
 </div>
+
+<footer class="footer">
+    <img alt="UberEats" role="img" src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/97c43f8974e6c876.svg" width="146" height="24" class="footer-img">
+
+    <div class="footer-download">
+        <a href="https://apps.apple.com/us/app/uber-eats-food-delivery/id1058959277">
+            <img alt="Pobierz z App Store" role="img" src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/c0217c9dde9821a0.svg" loading="lazy" decoding="async" height="40" width="135">
+        </a>
+        <a href="https://play.google.com/store/apps/details?id=com.ubercab.eats">
+            <img alt="Pobierz z Google Play" src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/7005e530de889ff0.png" loading="lazy" decoding="async" height="40" width="134">
+        </a>
+    </div>
+
+    <div class="other-options">
+    <a href="//help.uber.com/ubereats" class="other-options-text">Pomoc</a>
+    <a href="//merchants.ubereats.com/s/signup/" class="other-options-text">Dodaj swoją restaurację</a>
+    <a href="//www.uber.com/drive/delivery/" class="other-options-text">Zarejestruj się, aby realizować dostawy</a>
+    <a href="//www.uber.com/business/eats" class="other-options-text">Utwórz konto firmowe</a>
+    <a href="https://www.uber.com/legal/en/document/?name=uber-eats-additional-marketplace-fee-terms&amp;country=poland&amp;lang=pl" class="other-options-text">Warunki dot. opłaty marketplace</a>
+    <a href="https://www.uber.com/legal/hr/document/?name=eater-delivery-service-agreements&amp;country=poland&amp;lang=pl" class="other-options-text" style="margin-bottom: 0;">Umowa dot. usług dostawy</a>
+    </div>
+
+    <div class="other-options">
+    <a class="other-options-text" href="/pl/near-me">Restauracje w pobliżu</a>
+    <a class="other-options-text" href="/pl/location">Pokaż wszystkie miasta</a>
+    <a class="other-options-text" href="/pl/location#all-countries">Zobacz wszystkie kraje</a>
+    <a class="other-options-text" href="/pl/pickup/near-me">Odbiór w pobliżu</a>
+    <a href="//about.ubereats.com" class="other-options-text">Informacje o Uber Eats</a>
+    <a rel="nofollow" class="other-options-text" style="align-items: center; margin-bottom: 0;" href="/pl/select-language">
+        <svg aria-label="Wybierz język" role="img" focusable="false" viewBox="0 0 16 15" class="other-options-text-svg">
+            <path d="M12.267 6.667H9.733l-.933 2.2c-.467-.2-1-.534-1.533-.934.866-.866 1.6-2 2-3.266h1.4v-2h-4v-2h-2v2h-4v2h1.466c.4 1.266 1.134 2.4 1.934 3.266-1.4.934-2.734 1.467-2.734 1.467v2.133L2 11.267c.133-.067 1.867-.667 3.667-2 .8.6 1.666 1.066 2.333 1.4l-1.8 4h2.2l.867-2h3.466l.867 2h2.2zm-5.2-2a6.79 6.79 0 01-1.4 2c-.534-.6-1.067-1.267-1.4-2zm3.066 6L11 8.733l.867 1.934z"></path>
+        </svg>
+        <p>Polski</p></a>
+    </div>
+
+</footer>
     <script src="script.js"></script>
 </body>
 </html>
