added politics in footer

--- a/index.html
+++ b/index.html
@@ -415,8 +415,19 @@ Lub
             </a>
     </div>
 
+    <div class="politics">
+        <a href="//www.uber.com/legal/document/?name=how-the-uber-and-uber-eats-apps-and-websites-work" class="documents-text">Działanie stron oraz aplikacji Uber i Uber Eats</a>
+        <a href="//www.uber.com/legal/privacy/users/" class="documents-text">Polityka prywatności</a>
+        <a href="//www.uber.com/terms" class="documents-text">Warunki</a>
+        <a href="//help.uber.com/ubereats/article/uber-eats-pricing?nodeId=2adbed88-9822-4690-9529-3061c4821755" class="documents-text">Cennik</a>
+        <a href="//privacy.uber.com/privacy/california/" class="documents-text">Nie zgadzam się na sprzedaż ani udostępnianie danych osobowych</a>
+        <div class="other-options-documents">Ta strona jest chroniona z użyciem kodu reCAPTCHA. Obowiązują dokumenty: 
+            <a rel="nofollow" href="//policies.google.com/privacy">Polityka prywatności</a> oraz 
+            <a rel="nofollow" href="//policies.google.com/terms">Warunki korzystania z usługi</a> firmy Google.
+        </div>
+        <div class="other-options-documents" style="margin-bottom: 0;">© <!-- -->2023<!-- --> Uber Technologies Inc.</div>
+    </div>
 
-    
 </footer>
     <script src="script.js"></script>
 </body>
