--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
 
 
 
-<div class="hamburger-container">
-<div class="hamburger-background" id="bg"  onclick="closebackground()"></div>
+<div class="hamburger-container" id="hamburger" onclick="closehamburger()">
 <div class="hamburger-menu-overlay" id="menu">
 <div class="hambuger-text">
 <div>
@@ -186,7 +185,7 @@
         <div class="space">
 <div class="navbar-containter">
     
-    <button aria-label="Główne menu nawigacji" class="navbar-button" onclick="openhamburger(), openbackground()">
+    <button aria-label="Główne menu nawigacji" class="navbar-button" onclick="openhamburger()">
         <svg aria-hidden="true" focusable="false" viewBox="0 0 20 20" >
         <path d="M19.167 3.333H.833v2.5h18.334v-2.5zm0 5.834H.833v2.5h18.334v-2.5zM.833 15h18.334v2.5H.833V15z"></path></svg>
     </button>
