added navbar fullscreen

--- a/index.html
+++ b/index.html
@@ -255,28 +255,20 @@
 						</button>
 						<a><img class="name" src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/97c43f8974e6c876.svg" /></a>
 
-						<div class="spacer"></div>
-						<a
-							rel="nofollow"
-							tabindex="0"
+						<div class="log-register">
+						<a rel="nofollow" tabindex="0"
 							href="https://www.ubereats.com/login-redirect/?campaign=signin_universal_link&amp;marketing_vistor_id=51618c03-839e-4245-a32b-352d347fb0bd&amp;redirect=%2Fpl&amp;guest_mode=false&amp;app_clip=false"
 							data-test="header-sign-in"
 							class="login">
 							<svg aria-hidden="true" focusable="false" viewBox="0 0 26 26">
-								<path
-									fill-rule="evenodd"
-									clip-rule="evenodd"
-									d="M18.958 7.042a5.958 5.958 0 11-11.916 0 5.958 5.958 0 0111.916 0zM3.25 21.667c0-3.575 2.925-6.5 6.5-6.5h6.5c3.575 0 6.5 2.925 6.5 6.5v3.25H3.25v-3.25z"></path>
+								<path fill-rule="evenodd" clip-rule="evenodd" d="M18.958 7.042a5.958 5.958 0 11-11.916 0 5.958 5.958 0 0111.916 0zM3.25 21.667c0-3.575 2.925-6.5 6.5-6.5h6.5c3.575 0 6.5 2.925 6.5 6.5v3.25H3.25v-3.25z"></path>
 							</svg>
+							<p class="login-text">Zaloguj się</p>
 						</a>
 
-						<a
-							rel="nofollow"
-							tabindex="0"
-							href="https://eats.uber.com/login-redirect/?campaign=cro_signin_cta_universal_link&amp;marketing_vistor_id=51618c03-839e-4245-a32b-352d347fb0bd&amp;redirect=%2Fpl"
-							class="register"
-							>Zarejestruj się</a
-						>
+						<a rel="nofollow" tabindex="0" href="https://eats.uber.com/login-redirect/?campaign=cro_signin_cta_universal_link&amp;marketing_vistor_id=51618c03-839e-4245-a32b-352d347fb0bd&amp;redirect=%2Fpl" 
+						class="register">Zarejestruj się</a>
+						</div>
 					</div>
 				</div>
 			</div>
