--- a/index.html
+++ b/index.html
@@ -275,11 +275,8 @@
 		</header>
 
 		<div class="main-containter">
-			<img
-				alt=""
-				src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/d8ceaf24a3164759.webp"
-				class="main-background" />
-
+			<img alt="" src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/d8ceaf24a3164759.webp" class="main-background" />
+			<img alt="" src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/c413f20400e04805.webp" class="main-background-full" />
 			<div class="main-content">
 				<h2 class="text-order">Zamów dostawę w Twojej okolicy</h2>
 
