added main-content fullscreen

--- a/index.html
+++ b/index.html
@@ -279,8 +279,8 @@
 			<img alt="" src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/c413f20400e04805.webp" class="main-background-full" />
 			<div class="main-content">
 				<h2 class="text-order">Zamów dostawę w Twojej okolicy</h2>
-
-				<div id="delivery-fix">
+				<div class="delivery-container">		
+				<div id="delivery-fix" class="delivery-address-fixed">
 					<a class="delivery-address" onclick="openAddress()" id="delivery">
 						<div class="delivery-address-field" id="field">
 							<svg aria-hidden="true" focusable="false" viewBox="0 0 24 24" class="delivery-address-icon">
@@ -340,6 +340,7 @@
 				</a>
 
 				<a class="search" onclick="openAddress()">Wyszukaj restauracje</a>
+			</div>
 				<div class="or-login">
 					Lub
 					<a
@@ -347,6 +348,7 @@
 						>Zaloguj się</a
 					>
 				</div>
+				
 			</div>
 
 			<div class="services-section">
