added graphics fullscreen

--- a/index.html
+++ b/index.html
@@ -375,8 +375,8 @@
 						</button>
 					</a>
 				</div>
-
-				<div class="more-sections">
+		
+				<div class="more-sections graphics">
 					<a href="//www.uber.com/business/eats">
 						<img
 							alt=""
