added cities, countries fullscreen

--- a/index.html
+++ b/index.html
@@ -427,53 +427,31 @@
 					</div>
 
 					<div class="more-sections-cities">
-						<div>
-							<a href="https://www.ubereats.com/pl/city/bydgoszcz-kujawsko-pomorskie"
-								><span class="city-name">Bydgoszcz</span></a
-							>
-						</div>
-						<div>
-							<a href="https://www.ubereats.com/pl/city/czestochowa-slaskie"
-								><span class="city-name">Częstochowa</span></a
-							>
-						</div>
-						<div>
-							<a href="https://www.ubereats.com/pl/city/kraków-malopolskie"><span class="city-name">Kraków</span></a>
-						</div>
-						<div>
-							<a href="https://www.ubereats.com/pl/city/lódz-lódzkie"><span class="city-name">Łódź</span></a>
-						</div>
-						<div>
-							<a href="https://www.ubereats.com/pl/city/lublin-lubelskie"><span class="city-name">Lublin</span></a>
-						</div>
-						<div>
-							<a href="https://www.ubereats.com/pl/city/poznan-wielkopolskie"><span class="city-name">Poznań</span></a>
-						</div>
-						<div>
-							<a href="https://www.ubereats.com/pl/city/rzeszów-podkarpackie"><span class="city-name">Rzeszów</span></a>
-						</div>
-						<div>
-							<a href="https://www.ubereats.com/pl/city/szczecin-zachodniopomorskie"
-								><span class="city-name">Szczecin</span></a
-							>
-						</div>
-						<div>
-							<a href="https://www.ubereats.com/pl/city/torun-kujawsko-pomorskie"
-								><span class="city-name">Toruń</span></a
-							>
-						</div>
-						<div>
-							<a href="https://www.ubereats.com/pl/city/gdansk-pomorskie"><span class="city-name">Trójmiasto</span></a>
-						</div>
-						<div>
-							<a href="https://www.ubereats.com/pl/city/warszawa-mazowieckie"
-								><span class="city-name">Warszawa</span></a
-							>
-						</div>
-						<div>
-							<a href="https://www.ubereats.com/pl/city/wroclaw-dolnoslaskie"><span class="city-name">Wrocław</span></a>
-						</div>
+						<div class="display-none"><a href="https://www.ubereats.com/pl/city/bialystok-podlaskie"><span class="city-name">Białystok</span></a></div>
+						<div><a href="https://www.ubereats.com/pl/city/bydgoszcz-kujawsko-pomorskie"><span class="city-name">Bydgoszcz</span></a></div>
+						<div><a href="https://www.ubereats.com/pl/city/czestochowa-slaskie"><span class="city-name">Częstochowa</span></a></div>
+						<div class="display-none"><a href="https://www.ubereats.com/pl/city/gorzów-wielkopolski-lubuskie"><span class="city-name">Gorzów Wielkopolski</span></a></div>
+						<div class="display-none"><a href="https://www.ubereats.com/pl/city/kalisz-wielkopolskie"><span class="city-name">Kalisz</span></a></div>
+						<div class="display-none"><a href="https://www.ubereats.com/pl/city/kielce-swietokrzyskie"><span class="city-name">Kielce</span></a></div>
+						<div class="display-none"><a href="https://www.ubereats.com/pl/city/koszalin-zachodniopomorskie"><span class="city-name">Koszalin</span></a></div>
+						<div><a href="https://www.ubereats.com/pl/city/kraków-malopolskie"><span class="city-name">Kraków</span></a></div>
+						<div class="display-none"><a href="https://www.ubereats.com/pl/city/legnica-dolnoslaskie"><span class="city-name">Legnica</span></a></div>
+						<div><a href="https://www.ubereats.com/pl/city/lódz-lódzkie"><span class="city-name">Łódź</span></a></div>
+						<div><a href="https://www.ubereats.com/pl/city/lublin-lubelskie"><span class="city-name">Lublin</span></a></div>
+						<div class="display-none"><a href="https://www.ubereats.com/pl/city/olsztyn-slaskie"><span class="city-name">Olsztyn</span></a></div>
+						<div class="display-none"><a href="https://www.ubereats.com/pl/city/plock-mazowieckie"><span class="city-name">Płock</span></a></div>
+						<div><a href="https://www.ubereats.com/pl/city/poznan-wielkopolskie"><span class="city-name">Poznań</span></a></div>
+						<div class="display-none"><a href="https://www.ubereats.com/pl/city/radom-mazowieckie"><span class="city-name">Radom</span></a></div>
+						<div><a href="https://www.ubereats.com/pl/city/rzeszów-podkarpackie"><span class="city-name">Rzeszów</span></a></div>
+						<div><a href="https://www.ubereats.com/pl/city/szczecin-zachodniopomorskie"><span class="city-name">Szczecin</span></a></div>
+						<div><a href="https://www.ubereats.com/pl/city/torun-kujawsko-pomorskie"><span class="city-name">Toruń</span></a></div>
+						<div><a href="https://www.ubereats.com/pl/city/gdansk-pomorskie"><span class="city-name">Trójmiasto</span></a></div>
+						<div><a href="https://www.ubereats.com/pl/city/warszawa-mazowieckie"><span class="city-name">Warszawa</span></a></div>
+						<div class="display-none"><a href="https://www.ubereats.com/pl/city/wloclawek-kujawsko-pomorskie"><span class="city-name">Włocławek</span></a></div>
+						<div><a href="https://www.ubereats.com/pl/city/wroclaw-dolnoslaskie"><span class="city-name">Wrocław</span></a></div>
+						<div class="display-none"><a href="https://www.ubereats.com/pl/city/zielona-góra-lubuskie"><span class="city-name">Zielona Góra</span></a></div>
 					</div>
+					
 					<a class="display-all-cities" href="ubereats.com/pl/location">Wyświetl wszystkie miasta (ponad 500)</a>
 				</div>
 
