added footer-container fullscreen

--- a/index.html
+++ b/index.html
@@ -556,6 +556,8 @@
 			</div>
 
 			<footer class="footer">
+			<div class="footer-container">
+			<div class="footer-imgs-all">
 				<img
 					alt="UberEats"
 					role="img"
@@ -585,8 +587,8 @@
 							width="134" />
 					</a>
 				</div>
-
-				<div class="other-options">
+			</div>
+				<div class="other-options fullscreen">
 					<a href="//help.uber.com/ubereats" class="other-options-text">Pomoc</a>
 					<a href="//merchants.ubereats.com/s/signup/" class="other-options-text">Dodaj swoją restaurację</a>
 					<a href="//www.uber.com/drive/delivery/" class="other-options-text"
@@ -606,7 +608,7 @@
 					>
 				</div>
 
-				<div class="other-options">
+				<div class="other-options fullscreen">
 					<a class="other-options-text" href="/pl/near-me">Restauracje w pobliżu</a>
 					<a class="other-options-text" href="/pl/location">Pokaż wszystkie miasta</a>
 					<a class="other-options-text" href="/pl/location#all-countries">Zobacz wszystkie kraje</a>
@@ -629,6 +631,7 @@
 						<p>Polski</p></a
 					>
 				</div>
+			</div>
 				<div class="mini-icons">
 					<a href="//www.facebook.com/ubereats" class="mini-icons-gap">
 						<svg aria-hidden="true" focusable="false" viewBox="0 0 16 16">
