added politics-container fullscreen

--- a/index.html
+++ b/index.html
@@ -632,6 +632,7 @@
 					>
 				</div>
 			</div>
+			<div class="politics-container">
 				<div class="mini-icons">
 					<a href="//www.facebook.com/ubereats" class="mini-icons-gap">
 						<svg aria-hidden="true" focusable="false" viewBox="0 0 16 16">
@@ -659,7 +660,7 @@
 					</a>
 				</div>
 
-				<div class="politics">
+				<div class="politics" style="padding-bottom: 0;">
 					<a
 						href="//www.uber.com/legal/document/?name=how-the-uber-and-uber-eats-apps-and-websites-work"
 						class="documents-text"
@@ -675,12 +676,15 @@
 					<a href="//privacy.uber.com/privacy/california/" class="documents-text"
 						>Nie zgadzam się na sprzedaż ani udostępnianie danych osobowych</a
 					>
+				</div>
+			</div>
+				<div class="politics">
 					<div class="other-options-documents">
 						Ta strona jest chroniona z użyciem kodu reCAPTCHA. Obowiązują dokumenty:
 						<a rel="nofollow" href="//policies.google.com/privacy">Polityka prywatności</a> oraz
 						<a rel="nofollow" href="//policies.google.com/terms">Warunki korzystania z usługi</a> firmy Google.
 					</div>
-					<div class="other-options-documents" style="margin-bottom: 0">
+					<div class="other-options-documents options-fullscreen" style="margin-bottom: 0">
 						©
 						<!-- -->2023<!-- -->
 						Uber Technologies Inc.
