--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 		</div>
 
 		<header>
-			<div class="navbar">
+			<div class="navbar" id="navbar">
 				<div class="space">
 					<div class="navbar-containter">
 						<button aria-label="Główne menu nawigacji" class="navbar-button" onclick="openhamburger()">
