added input and clear-button in delivery-address

--- a/index.html
+++ b/index.html
@@ -293,6 +293,8 @@
 								</defs>
 							</svg>
 							<div class="delivery-address-text">Wpisz adres dostawy</div>
+							<input class="delivery-address-input" id="delivery-address-input" value="" placeholder="Wpisz adres dostawy">
+							<button class="clear-button" id="clearBtn" onclick="clearInput()">Wyczyść</button>
 						</div>
 					</a>
 				</div>
