small fix hamburger-menu

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 			</button>
 		</div>
 
-		<div class="hamburger-container" id="hamburger" onclick="closehamburger()">
+		<div class="hamburger-container" id="hamburger" onclick="closehamburger()"></div>
 			<div class="hamburger-menu-overlay" id="menu">
 				<div class="hambuger-text">
 					<div>
@@ -241,7 +241,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		
 
 		<header>
 			<div class="navbar" id="navbar">
