--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 				<div class="delivery-container">		
 				<div id="delivery-fix" class="delivery-address-fixed">
 					<a class="delivery-address" onclick="openAddress()" id="delivery">
-						<div class="delivery-address-field" id="field">
+						<div class="delivery-address-field" id="field" onclick="toggleClass('field')">
 							<svg aria-hidden="true" focusable="false" viewBox="0 0 24 24" class="delivery-address-icon">
 								<g clip-path="url(#clip0)">
 									<path
