changes in section more-sections-text-city

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 				</div>
 
 				<div class="more-sections">
-					<h2 class="more-sections-text-city">Miasta w pobliżu</h2>
+					<h2 class="more-sections-text-city">Miasta w pobliżu <a class="display-all-cities display-none" href="ubereats.com/pl/location">Wyświetl wszystkie miasta (ponad 500)</a></h2>
 
 					<div class="more-sections-map">
 						<div class="map">
@@ -498,7 +498,7 @@
 						<div class="display-none"><a href="https://www.ubereats.com/pl/city/zielona-góra-lubuskie"><span class="city-name">Zielona Góra</span></a></div>
 					</div>
 					
-					<a class="display-all-cities" href="ubereats.com/pl/location">Wyświetl wszystkie miasta (ponad 500)</a>
+					<a class="display-all-cities dn" href="ubereats.com/pl/location">Wyświetl wszystkie miasta (ponad 500)</a>
 				</div>
 
 				<div class="more-sections">
