changes in section country-text, country-list

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
 				</div>
 
 				<div class="more-sections">
-					<h2 class="country-text">Kraje, w których działa Uber Eats</h2>
+					<h2 class="country-text">Kraje, w których działa Uber Eats <a class="all-countries" href="https://www.ubereats.com/pl/location#all-countries">Zobacz wszystkie kraje</a></h2>
 					<div class="country-list">
 						<div>
 							<a href="https://www.ubereats.com/au?slr=1"><span class="country-list-text">Australia</span></a>
@@ -597,7 +597,7 @@
 						</div>
 					</div>
 
-					<a class="all-countries" href="https://www.ubereats.com/pl/location#all-countries">Zobacz wszystkie kraje</a>
+					
 				</div>
 			</div>
 
