--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 									d="M19.167 3.333H.833v2.5h18.334v-2.5zm0 5.834H.833v2.5h18.334v-2.5zM.833 15h18.334v2.5H.833V15z"></path>
 							</svg>
 						</button>
-						<a><img class="name" src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/97c43f8974e6c876.svg" /></a>
+						<a class="name"  href="#scrollup"><img src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/97c43f8974e6c876.svg" /></a>
 					</div>
 
 						<div id="delivery-fix-navbar" class="delivery-address-fixed none-fullscreen" style="min-width: unset;">
@@ -300,7 +300,7 @@
 
 		<div class="main-containter">
 			<img alt="" src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/d8ceaf24a3164759.webp" class="main-background" />
-			<img alt="" src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/c413f20400e04805.webp" class="main-background-full" />
+			<img alt="" src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/c413f20400e04805.webp" class="main-background-full" id="scrollup"/>
 			<div class="main-content">
 				<h2 class="text-order">Zamów dostawę w Twojej okolicy</h2>
 				<div class="delivery-container">		
@@ -464,11 +464,12 @@
 				</div>
 
 				<div class="more-sections">
-					<h2 class="more-sections-text-city">Miasta w pobliżu <a class="display-all-cities display-none" href="ubereats.com/pl/location">Wyświetl wszystkie miasta (ponad 500)</a></h2>
+					<h2 class="more-sections-text-city">Miasta w pobliżu <a class="display-all-cities display-none" href="https://www.ubereats.com/pl/location">Wyświetl wszystkie miasta (ponad 500)</a></h2>
 
 					<div class="more-sections-map">
 						<div class="map">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5035856.849280452!2d19.134379!3d51.953751!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47009964a4640bbb%3A0x97573ca49cc55ea!2sPolska!5e0!3m2!1spl!2spl!4v1701200810348!5m2!1spl!2spl" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+							<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5035856.849280452!2d19.134379!3d51.953751!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47009964a4640bbb%3A0x97573ca49cc55ea!2sPolska!5e0!3m2!1spl!2spl&output=embed"
+								width="100%" height="100%" style="border:0; z-index: 100;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 						</div>
 					</div>
 
@@ -498,7 +499,7 @@
 						<div class="display-none"><a href="https://www.ubereats.com/pl/city/zielona-góra-lubuskie"><span class="city-name">Zielona Góra</span></a></div>
 					</div>
 					
-					<a class="display-all-cities dn" href="ubereats.com/pl/location">Wyświetl wszystkie miasta (ponad 500)</a>
+					<a class="display-all-cities dn" href="https://www.ubereats.com/pl/location">Wyświetl wszystkie miasta (ponad 500)</a>
 				</div>
 
 				<div class="more-sections">
