fixed ubereats icon and delivery-now position

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 				<div class="now-bottom-container">
 					<div class="now-bottom-items">
 						<button class="now-shedule">Zaplanuj</button>
-						<button class="now-shedule" style="background: #eeeeee; color: #000000; margin-bottom: 0px">
+						<button class="now-shedule second-shedule" style="background: #eeeeee; color: #000000; margin-bottom: 0px" onclick="closeNow()">
 							Dostarcz teraz
 						</button>
 					</div>
@@ -322,7 +322,7 @@
 						</div>
 					</a>
 				</div>
-	<div class="delivery-now-list">
+	<div class="delivery-now-list" id="delivery-now-list">
 				<a class="delivery-now" onclick="openNow(),  openList()">
 					<div class="delivery-now-field">
 						<div class="delivery-now-icon">
